Work on ipython example notebooks

--- a/examples/01_environment_setup.ipynb
+++ b/examples/01_environment_setup.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Setting up the Environment\n",
     "\n",
-    "Gravflow is a GPU based module, it relies heavily on vectorised GPU functions in order to speed up calculations, and many parts of it (primarily cuPhenom), do not currently have a CPU alternative. Most of the functions are built from TensorFlow functions, which can be run in CPU only operation, albeit not as efficiently, and doing so will loose much of the advantage this module provides over other alternative. You're welcome to try to run GravyFlow in a CPU only environment, but I would not count on it.\n",
+    "Gravflow is a GPU based module, it relies heavily on vectorised GPU functions in order to speed up calculations, and many parts of it (primarily cuPhenom), do not currently have a CPU alternative. Most of the functions are built from TensorFlow functions, which can be run in CPU only operation, albeit not as efficiently, and doing so will loose much of the advantage this module provides over other alternative. You're welcome to try to run GravyFlow in a CPU only environment, but it has not been rigerously tested.\n",
     "\n",
-    "Much of the enironment setup can be handled automatically by running the `setup.sh` bash script in the base directory, please note that GravyFlow is a very young module early in its development and there are likely to be teething problems, especially with the automated helper scripts. If the setup script does not work, try to ensure that you are running GravyFlow in an enviroment in which TensorFlow can see avalible GPUs.\n",
+    "Much of the enironment setup can be handled automatically by running the `setup.sh` bash script in the base directory. Note that GravyFlow is still in development and there are likely to be teething problems, especially with the automated helper scripts. If the setup script does not work, try to ensure that you are running GravyFlow in an enviroment in which TensorFlow can see avalible GPUs.\n",
     "\n",
     "## Sharing is caring\n",
     "\n",
@@ -28,10 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c6b3d964",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-09 01:51:07.950829: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-01-09 01:51:16.765879: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -51,60 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "feccc33f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-02 13:59:39.267249: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-11-02 13:59:40.266379: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/michael.norman/data_ad_infinitum\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/michael.norman/.conda/envs/gravyflow/lib/python3.10/site-packages/gwpy/time/__init__.py:36: UserWarning: Wswiglal-redir-stdio:\n",
-      "\n",
-      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
-      "This may lead to performance penalties. To disable locally, use:\n",
-      "\n",
-      "with lal.no_swig_redirect_standard_output_error():\n",
-      "    ...\n",
-      "\n",
-      "To disable globally, use:\n",
-      "\n",
-      "lal.swig_redirect_standard_output_error(True)\n",
-      "\n",
-      "Note however that this will likely lead to error messages from\n",
-      "LAL functions being either misdirected or lost when called from\n",
-      "Jupyter notebooks.\n",
-      "\n",
-      "To suppress this warning, use:\n",
-      "\n",
-      "import warnings\n",
-      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
-      "import lal\n",
-      "\n",
-      "  from lal import LIGOTimeGPS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the absolute path of the parent directory\n",
     "parent_dir = os.path.abspath('../../')\n",
-    "print(parent_dir)\n",
     "\n",
     "# Add the parent directory to sys.path\n",
     "if parent_dir not in sys.path:\n",
@@ -125,18 +88,21 @@
     "\n",
     "It has the following optional arguments:\n",
     "\n",
-    "- `min_gpu_memory_mb`: int = 4000\n",
+    "- `min_gpu_memory_mb` : int = 4000\n",
     "  - This sets the minimum required GPU memory in megabytes for a GPU to be considered as free and allocated for use by GravyFlow. By default, this is 4000 Mb.\n",
-    "- `num_gpus_to_request`: int = 1\n",
+    "- `max_gpu_utilization_percentage` : float = 80\n",
+    "  - The maximum GPU utalisation a GPU can have as a percetentage, before GravyFlow disallows utalization. Default is 70.\n",
+    "- `num_gpus_to_request` : int = 1\n",
     "  - This determines the number of GPUs that GravyFlow will attempt to find and subsequently run on. The default is 1.\n",
-    "- `memory_to_allocate_tf`: int = 2000\n",
+    "- `memory_to_allocate_tf` : int = 2000\n",
     "  - This determines the amount of GPU memory that GravyFlow will allocate per GPU. This value is fixed, rather than allowing growth, to ensure that CUDA functions run by GravyFlow have memory to run. If you are using cuPhenom for CBC generation, ensure that there is room left on the GPU for it to run when you set this value. It defaults to 2000 Mb.\n",
-    "\n",
-    "## Return Object\n",
+    "- `gpus` : Union[str, int, List[Union[int, str]], None] = None:\n",
+    "  - If this variable is set, it will force allocation on inputted GPUs. This is not reccomended unless you have a specific reason to run on specific GPUs.\n",
+    "  If set to None, which is default, GravyFlow will automatically allocate a free GPU(s).\n",
     "\n",
     "The function returns the following object:\n",
     "\n",
-    "- `strategy`: tf.distribute.Strategy\n",
+    "- `strategy` : tf.distribute.Strategy\n",
     "  - This object will allow for multi-GPU usage in subsequent TensorFlow operations.\n",
     "\n",
     "## Function Operations\n",
@@ -156,19 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "db7298c7",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'gf' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Setup enviroment and return tf.distributed stratergy object.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m env \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39menv()\n\u001b[1;32m      4\u001b[0m \u001b[39mwith\u001b[39;00m env:\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m     \u001b[39m# ALl code placed her will be in the scope of the TensorFlow strategy.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m     \u001b[39m# Print CUDA_VISIBLE_DEVICES after gf.env() has run:\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     cuda_visible_devices \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39menviron\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mCUDA_VISIBLE_DEVICES\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mNot set\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'gf' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:TensorFlow version: 2.12.1, CUDA version: 11.8\n",
+      "2024-01-09 01:53:39.806029: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:0a:00.0, compute capability: 7.0\n",
+      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES after environment setup: 2\n",
+      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
    ],
@@ -178,10 +150,10 @@
     "\n",
     "with env:\n",
     "\n",
-    "    # ALl code placed her will be in the scope of the TensorFlow strategy.\n",
+    "    # ALl code placed here will be in the scope of the TensorFlow strategy.\n",
     "\n",
     "    # Print CUDA_VISIBLE_DEVICES after gf.env() has run:\n",
-    "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set')\n",
+    "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
     "    print(f'CUDA_VISIBLE_DEVICES after environment setup: {cuda_visible_devices}')\n",
     "\n",
     "    # Print devices visible to TensorFlow after gf.env() has run:\n",
@@ -200,11 +172,48 @@
     "\n",
     "Now that we have seen how we can automatically setup the environment, let us move of to acquiring our first interferometer noise background dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ccbe5cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:TensorFlow version: 2.12.1, CUDA version: 11.8\n",
+      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES after environment setup: 2,4. This has changed correctly.\n",
+      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]. This has not changed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If we attempt to run gf.env again, this time with 2 GPUs requested, without restarting the kernel.\n",
+    "env = gf.env(num_gpus_to_request=2)\n",
+    "\n",
+    "# gf.env will prevent a new scope from being created, as this is not allowed by TensorFlow, and simply\n",
+    "# return the same enviroment.\n",
+    "with env:\n",
+    "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
+    "    print(f'CUDA_VISIBLE_DEVICES after environment setup: {cuda_visible_devices}. This has changed correctly.')\n",
+    "\n",
+    "    gpus = tf.config.list_physical_devices('GPU')\n",
+    "    print(f\"GPUs visible to TensorFlow after environment setup: {gpus}. This has not changed.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.12 ('gravyflow')",
+   "display_name": "Python 3.10.13 ('gravyflow-212')",
    "language": "python",
    "name": "python3"
   },
@@ -218,11 +227,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a6f1be94f56c97543b1174f0691434140ad3c33189a0dd1833b365759a987259"
+    "hash": "c749986c5f458fb2b067b85dd36de77f848d054cfc4dbd65eb5821cf27edab2a"
    }
   }
  },
