Further additions to examples

--- a/examples/01_environment_setup.ipynb
+++ b/examples/01_environment_setup.ipynb
@@ -82,28 +82,27 @@
    "id": "74c64bc5",
    "metadata": {},
    "source": [
-    "# GPU Setup\n",
+    "## GPU Setup\n",
     "\n",
     "For ease of use, GravyFlow comes with a function to automatically sort out the GPU environment: `gf.env`.\n",
     "\n",
     "It has the following optional arguments:\n",
     "\n",
     "- `min_gpu_memory_mb` : int = 4000\n",
-    "  - This sets the minimum required GPU memory in megabytes for a GPU to be considered as free and allocated for use by GravyFlow. By default, this is 4000 Mb.\n",
+    "  >This sets the minimum required GPU memory in megabytes for a GPU to be considered as free and allocated for use by GravyFlow. By default, this is 4000 Mb.\n",
     "- `max_gpu_utilization_percentage` : float = 80\n",
-    "  - The maximum GPU utalisation a GPU can have as a percetentage, before GravyFlow disallows utalization. Default is 70.\n",
+    "  > The maximum GPU utalisation a GPU can have as a percetentage, before GravyFlow disallows utalization. Default is 70.\n",
     "- `num_gpus_to_request` : int = 1\n",
-    "  - This determines the number of GPUs that GravyFlow will attempt to find and subsequently run on. The default is 1.\n",
+    "  > This determines the number of GPUs that GravyFlow will attempt to find and subsequently run on. The default is 1.\n",
     "- `memory_to_allocate_tf` : int = 2000\n",
-    "  - This determines the amount of GPU memory that GravyFlow will allocate per GPU. This value is fixed, rather than allowing growth, to ensure that CUDA functions run by GravyFlow have memory to run. If you are using cuPhenom for CBC generation, ensure that there is room left on the GPU for it to run when you set this value. It defaults to 2000 Mb.\n",
-    "- `gpus` : Union[str, int, List[Union[int, str]], None] = None:\n",
-    "  - If this variable is set, it will force allocation on inputted GPUs. This is not reccomended unless you have a specific reason to run on specific GPUs.\n",
-    "  If set to None, which is default, GravyFlow will automatically allocate a free GPU(s).\n",
+    "  > This determines the amount of GPU memory that GravyFlow will allocate per GPU. This value is fixed, rather than allowing growth, to ensure that CUDA functions run by GravyFlow have memory to run. If you are using cuPhenom for CBC generation, ensure that there is room left on the GPU for it to run when you set this value. It defaults to 2000 Mb. \n",
+    "- `gpus` : Union[str, int, List[Union[int, str]], None] = None\n",
+    "  > If this variable is set, it will force allocation on inputted GPUs. This is not reccomended unless you have a specific reason to run on specific GPUs. If set to None, which is default, GravyFlow will automatically allocate a free GPU(s).\n",
     "\n",
     "The function returns the following object:\n",
     "\n",
     "- `strategy` : tf.distribute.Strategy\n",
-    "  - This object will allow for multi-GPU usage in subsequent TensorFlow operations.\n",
+    "  > This object will allow for multi-GPU usage in subsequent TensorFlow operations.\n",
     "\n",
     "## Function Operations\n",
     "\n",
