--- a/examples/01_environment_setup.ipynb
+++ b/examples/01_environment_setup.ipynb
@@ -5,15 +5,15 @@
    "id": "2fb362f8",
    "metadata": {},
    "source": [
-    "# Setting up the Environment\n",
+    "# Notebook 1: Setting up the Environment\n",
     "\n",
-    "Gravflow is a GPU based module, it relies heavily on vectorised GPU functions in order to speed up calculations, and many parts of it (primarily cuPhenom), do not currently have a CPU alternative. Most of the functions are built from TensorFlow functions, which can be run in CPU only operation, albeit not as efficiently, and doing so will loose much of the advantage this module provides over other alternative. You're welcome to try to run GravyFlow in a CPU only environment, but it has not been rigerously tested.\n",
+    "GravyFlow is a GPU-based module that relies heavily on vectorized GPU functions to accelerate calculations. Many components, primarily cuPhenom, do not have a CPU alternative. While most functions are built on TensorFlow and can operate in a CPU-only mode, they are less efficient in this configuration, diminishing the module's advantages. You are welcome to run GravyFlow in a CPU-only environment, but please note that it has not been rigorously tested.\n",
     "\n",
-    "Much of the enironment setup can be handled automatically by running the `setup.sh` bash script in the base directory. Note that GravyFlow is still in development and there are likely to be teething problems, especially with the automated helper scripts. If the setup script does not work, try to ensure that you are running GravyFlow in an enviroment in which TensorFlow can see avalible GPUs.\n",
+    "The environment setup can be largely automated by executing the `setup.sh` bash script located in the base directory. Be aware that Gravflow is under active development; as such, you might encounter issues, particularly with automated helper scripts. If you encounter problems with the setup script, ensure that TensorFlow can detect available GPUs in your environment.\n",
     "\n",
     "## Sharing is caring\n",
     "\n",
-    "Presumably, you will be running this on a GPU compute cluster which you share with other people. This means that you have to select which GPU(s) you are going to run on before you execute any programs. This first notebook will teach you how to ensure GravyFlow automatically selects a GPU with avalible GPU memory, and ensures your enviroment is set up in a way to run GravyFlow."
+    "Assuming you will be using GravyFlow on a shared GPU compute cluster, it is important to select the appropriate GPU(s) before executing any programs. This introductory notebook will guide you in configuring GravyFlow to automatically select a GPU with available memory. It will also ensure your environment is properly set up for running GravyFlow."
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "## Notebook imports\n",
     "\n",
-    "First we will import several built-in (os, sys) packages, and one depedancy, TensorFlow. These will be used by some blocks in this notebook."
+    "First, we will import a few built-in packages (os, sys) along with a key dependency, TensorFlow. These imports will be utilized in various sections of this notebook."
    ]
   },
   {
@@ -43,9 +43,16 @@
     }
    ],
    "source": [
+    "# Importing the os module, which provides functions for interacting with the operating system.\n",
+    "# This can be used for file and directory operations, environment variable management, etc.\n",
     "import os\n",
+    "\n",
+    "# Importing the sys module, which provides access to some variables used or maintained by the Python interpreter.\n",
+    "# Useful for manipulating the Python runtime environment, such as sys.path for module search paths.\n",
     "import sys\n",
     "\n",
+    "# Importing TensorFlow, a powerful library for machine learning and neural networks.\n",
+    "# Renamed as 'tf' for ease of use in the code.\n",
     "import tensorflow as tf"
    ]
   },
@@ -56,7 +63,7 @@
    "source": [
     "## Import GravyFlow\n",
     "\n",
-    "Next we will import the Gravyflow module. Currenly GravyFlow is not setup to be installable, so to ensure that this notebook can import it, a relative path from the grandfather directory of this notebook is used. If you have moved this notebook, this will need to be adjusted."
+    "Next, we will import the GravyFlow module. Currently, GravyFlow is not set up as an installable package. To enable the import in this notebook, we use a relative path from the 'grandparent' directory (i.e., two levels up in the directory hierarchy) of this notebook. If you have relocated this notebook, you will need to adjust the relative path accordingly."
    ]
   },
   {
@@ -66,14 +73,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the absolute path of the parent directory\n",
+    "# Get the absolute path of the grandparent directory (two levels up from the current directory)\n",
     "parent_dir = os.path.abspath('../../')\n",
     "\n",
-    "# Add the parent directory to sys.path\n",
+    "# Add the grandparent directory to sys.path if it's not already there.\n",
+    "# This is necessary to import GravyFlow if it's located in the grandparent directory.\n",
     "if parent_dir not in sys.path:\n",
     "    sys.path.append(parent_dir)\n",
     "\n",
-    "# To import gravyflow simply use:\n",
+    "# Import the GravyFlow module and rename it as 'gf' for ease of use in the code.\n",
     "import gravyflow as gf"
    ]
   },
@@ -84,39 +92,39 @@
    "source": [
     "## GPU Setup\n",
     "\n",
-    "For ease of use, GravyFlow comes with a function to automatically sort out the GPU environment: `gf.env`.\n",
+    "For ease of use, GravyFlow includes a function, `gf.env`, designed to automatically configure the GPU environment.\n",
     "\n",
-    "It has the following optional arguments:\n",
+    "The `gf.env` function has the following optional arguments:\n",
     "\n",
     "- `min_gpu_memory_mb` : int = 4000\n",
-    "  >This sets the minimum required GPU memory in megabytes for a GPU to be considered as free and allocated for use by GravyFlow. By default, this is 4000 Mb.\n",
+    "\t> Sets the minimum GPU memory (in megabytes) required for a GPU to be considered available for GravyFlow.\n",
     "- `max_gpu_utilization_percentage` : float = 80\n",
-    "  > The maximum GPU utalisation a GPU can have as a percetentage, before GravyFlow disallows utalization. Default is 70.\n",
+    "\t> Specifies the maximum GPU utilization (as a percentage) before GravyFlow disallows its use. The default is 80%.\n",
     "- `num_gpus_to_request` : int = 1\n",
-    "  > This determines the number of GPUs that GravyFlow will attempt to find and subsequently run on. The default is 1.\n",
+    "\t> Determines the number of GPUs GravyFlow will try to find and use. The default is 1.\n",
     "- `memory_to_allocate_tf` : int = 2000\n",
-    "  > This determines the amount of GPU memory that GravyFlow will allocate per GPU. This value is fixed, rather than allowing growth, to ensure that CUDA functions run by GravyFlow have memory to run. If you are using cuPhenom for CBC generation, ensure that there is room left on the GPU for it to run when you set this value. It defaults to 2000 Mb. \n",
+    "\t> Sets the amount of GPU memory (in megabytes) that GravyFlow allocates per GPU. This value is fixed to ensure that CUDA functions run efficiently. Default is 2000 Mb.\n",
     "- `gpus` : Union[str, int, List[Union[int, str]], None] = None\n",
-    "  > If this variable is set, it will force allocation on inputted GPUs. This is not reccomended unless you have a specific reason to run on specific GPUs. If set to None, which is default, GravyFlow will automatically allocate a free GPU(s).\n",
+    "\t> Allows manual allocation on specified GPUs. This is not recommended unless necessary. If set to None, GravyFlow automatically selects free GPUs.\n",
     "\n",
     "The function returns the following object:\n",
     "\n",
-    "- `strategy` : tf.distribute.Strategy\n",
-    "  > This object will allow for multi-GPU usage in subsequent TensorFlow operations.\n",
+    "- `strategy` : tf.distribute.Strategy: \n",
+    "\t> Enables multi-GPU usage in subsequent TensorFlow operations.\n",
     "\n",
-    "## Function Operations\n",
+    "### Function Operations\n",
     "\n",
-    "Calling this function will do a number of things:\n",
+    "When called, `gf.env` performs several operations:\n",
     "\n",
-    "1. Determine avalible GPUs which have free GPU memory greater than the requested: `min_gpu_memory_mb`.\n",
-    "2. Allocate a number of free GPUs equivalent to `num_gpus_to_request` for GravyFlow (TensorFlow) and cuPhenom (CUDA), by setting the `CUDA_VISIBLE_DEVICES` environmental variable.\n",
-    "3. Attempt to check that your CUDA version is compatible with your TensorFlow version.\n",
-    "4. Allocate `memory_to_allocate_tf` Mb of GPU memory to GravyFlow (TensorFlow) per requested GPU.\n",
-    "5. Setup and return a tf.distribute.Strategy object which will allow for multi-GPU usage in subsequent TensorFlow operations.\n",
+    "1. Identifies available GPUs with free memory exceeding `min_gpu_memory_mb`.\n",
+    "2. Allocates a specified number of GPUs (`num_gpus_to_request`) for GravyFlow and cuPhenom, setting the `CUDA_VISIBLE_DEVICES` environment variable accordingly.\n",
+    "3. Checks for compatibility between the CUDA and TensorFlow versions.\n",
+    "4. Allocates `memory_to_allocate_tf` Mb of GPU memory to TensorFlow per requested GPU.\n",
+    "5. Sets up and returns a `tf.distribute.Strategy` object for multi-GPU operations in TensorFlow.\n",
     "\n",
-    "## Example Usage\n",
+    "### Example Usage\n",
     "\n",
-    "Below is an example of its operation:"
+    "Below is an example of how to use `gf.env`:"
    ]
   },
   {
@@ -144,18 +152,19 @@
     }
    ],
    "source": [
-    "# Setup enviroment and return tf.distributed stratergy object.\n",
+    "# Set up the environment using gf.env() and return a tf.distribute.Strategy object.\n",
     "env = gf.env()\n",
     "\n",
     "with env:\n",
+    "    # All code within this block will be executed under the TensorFlow strategy scope.\n",
     "\n",
-    "    # ALl code placed here will be in the scope of the TensorFlow strategy.\n",
-    "\n",
-    "    # Print CUDA_VISIBLE_DEVICES after gf.env() has run:\n",
+    "    # Printing the CUDA_VISIBLE_DEVICES environment variable after gf.env() setup.\n",
+    "    # This shows which GPUs are allocated for TensorFlow operations.\n",
     "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
     "    print(f'CUDA_VISIBLE_DEVICES after environment setup: {cuda_visible_devices}')\n",
     "\n",
-    "    # Print devices visible to TensorFlow after gf.env() has run:\n",
+    "    # Printing the list of GPUs visible to TensorFlow after gf.env() has been executed.\n",
+    "    # This confirms the successful allocation and visibility of GPUs to TensorFlow.\n",
     "    gpus = tf.config.list_physical_devices('GPU')\n",
     "    print(f\"GPUs visible to TensorFlow after environment setup: {gpus}\")"
    ]
@@ -165,11 +174,10 @@
    "id": "f3bd5057",
    "metadata": {},
    "source": [
-    "## Important Notes on using gf.env:\n",
-    "- Running any TensorFlow functionality before initilising the environment will cause it to run on all GPUs by default.\n",
-    "- You cannot setup the environment more than once per Python kernel.\n",
+    "## Important Notes on Using gf.env:\n",
     "\n",
-    "Now that we have seen how we can automatically setup the environment, let us move of to acquiring our first interferometer noise background dataset."
+    "Running any TensorFlow functionality before initializing the environment will cause it to run on all GPUs by default.\n",
+    "You cannot set up the environment more than once per Python kernel session."
    ]
   },
   {
@@ -196,17 +204,29 @@
     }
    ],
    "source": [
-    "# If we attempt to run gf.env again, this time with 2 GPUs requested, without restarting the kernel.\n",
+    "# Attempt to run gf.env again, this time requesting 2 GPUs, without restarting the kernel.\n",
     "env = gf.env(num_gpus_to_request=2)\n",
     "\n",
-    "# gf.env will prevent a new scope from being created, as this is not allowed by TensorFlow, and simply\n",
-    "# return the same enviroment.\n",
+    "# gf.env will prevent the creation of a new scope, as TensorFlow does not allow this,\n",
+    "# and will return the same environment that was set up initially.\n",
     "with env:\n",
+    "    # Fetching and printing the CUDA_VISIBLE_DEVICES environment variable.\n",
+    "    # This check is to see if the environment variable has changed.\n",
     "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
     "    print(f'CUDA_VISIBLE_DEVICES after environment setup: {cuda_visible_devices}. This has changed correctly.')\n",
     "\n",
+    "    # Fetching and printing the list of GPUs visible to TensorFlow.\n",
+    "    # This is to verify if the visible GPUs to TensorFlow have changed.\n",
     "    gpus = tf.config.list_physical_devices('GPU')\n",
     "    print(f\"GPUs visible to TensorFlow after environment setup: {gpus}. This has not changed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3562e506",
+   "metadata": {},
+   "source": [
+    "Now that we have seen how to automatically set up the environment, let's move on to acquiring our first interferometer noise background dataset."
    ]
   }
  ],
