Added injection projection examples

--- a/examples/02_noise_acquisition.ipynb
+++ b/examples/02_noise_acquisition.ipynb
@@ -884,11 +884,40 @@
     "\n",
     "We will explore various waveform models available in GravyFlow, understand how to parameterize these waveforms, and learn techniques for effectively injecting them into noise data. The goal is to create a robust and realistic dataset that mimics actual gravitational wave signals, paving the way for advanced analyses and model training."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix: Understanding The Data Acquisition Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup the IFODataObtainer object:\n",
+    "# This object will be used to obtain real interferometer data based on specified parameters.\n",
+    "ifo_data_obtainer: gf.IFODataObtainer = gf.IFODataObtainer(\n",
+    "    observing_runs=gf.ObservingRun.O3,         # Specify the observing run (e.g., O3).\n",
+    "    data_quality=gf.DataQuality.BEST,          # Choose the quality of the data (e.g., BEST).\n",
+    "    data_labels=[                              # Define the types of data to include.\n",
+    "        gf.DataLabel.NOISE, \n",
+    "        gf.DataLabel.GLITCHES\n",
+    "    ],\n",
+    "    segment_order=gf.SegmentOrder.RANDOM,      # Order of segment retrieval (e.g., RANDOM).\n",
+    "    force_acquisition=True,                    # Force the acquisition of new data.\n",
+    "    cache_segments=False                       # Choose not to cache the segments.\n",
+    "\tlogging_level=Logging.INFO\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.13 ('gravyflow')",
+   "display_name": "Python 3.10.13 ('gravyflow-212')",
    "language": "python",
    "name": "python3"
   },
@@ -907,7 +936,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a6f1be94f56c97543b1174f0691434140ad3c33189a0dd1833b365759a987259"
+    "hash": "c749986c5f458fb2b067b85dd36de77f848d054cfc4dbd65eb5821cf27edab2a"
    }
   }
  },
