--- a/examples/03_injection_generation.ipynb
+++ b/examples/03_injection_generation.ipynb
@@ -5,21 +5,26 @@
    "metadata": {},
    "source": [
     "# Notebook 3: Injection Generation\n",
-    "\n"
+    "\n",
+    "In this notebook, we will explore how to generate waveforms with GravyFlow, which can be used to approximate gravitational wave signals. Throughout the GravyFlow library, a significant amount of computation is performed on the GPU. This approach means that there may be some initial overheads compared to CPU calculations, so individual operations might perform more slowly. However, when used for thousands of iterations, GravyFlow methods are often orders of magnitude faster than the functions they were adapted from.\n",
+    "\n",
+    "**Note:** As with the previous notebook, the iterators demonstrated in this notebook are not necessarily recommended for use in training machine learning models. Even if you only require waveforms, without any obfuscating noise, it is probably more convenient to use `gf.Dataset`, which will be explained in a later notebook. However, instances of `gf.Dataset` are composed by combining iterators of the type produced in this notebook with iterators shown in subsequent notebooks. Therefore, understanding the function of these iterators is useful.\n",
+    "\n",
+    "We will begin by performing the necessary imports:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-12 01:37:33.059356: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-01-12 08:28:02.916032: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-12 01:37:52.905793: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-01-12 08:28:39.398534: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -52,6 +57,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As usual, we will also set up our environment:\n",
+    "\n",
+    "**NOTE**: GravyFlow utilizes cuPhenom to generate IMRPhenomD waveforms on the GPU. It's important to note that cuPhenom will attempt to run on the same GPU as GravyFlow. However, cuPhenom does not use memory allocated for TensorFlow by the `gf.Env` function. Therefore, ensure that there is extra GPU memory available if you intend to generate IMRPhenomD waveforms with GravyFlow. This precaution helps in avoiding memory allocation issues and ensures smooth operation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -72,16 +86,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating Our First Waveform on the GPU\n",
+    "\n",
+    "Currently, GravyFlow supports the generation of two waveform types: IMRPhenomD and White Noise Bursts (WNB). It is planned to expand this selection in the future. Both waveform types are generated on the GPU. IMRPhenomD generation utilizes the cuPhenom C library and operates using the CUDA library for GPU processing. On the other hand, WNB generation is integrated within GravyFlow and uses TensorFlow functions.\n",
+    "\n",
+    "It's important to note that cuPhenom is designed exclusively for GPU use and does not have CPU support. As such, attempts to run it on a CPU will fail. Additionally, cuPhenom has independent error-checking systems, which may raise errors or cause crashes outside of GravyFlow's control. These errors, often Out Of Memory (OOM) issues, will typically be indicated in the error message. Future enhancements are aimed at more robust integration of cuPhenom errors and improved memory management.\n",
+    "\n",
+    "Each waveform type has an associated generator class that inherits from a common parent: gf.WaveformGenerator. This parent has some attributes which are common to all waveform generators, but each waveform generator subclass has extra associated attributes dependent on the parameters of the waveform it is designed to generate. The following attributes are common to all waveform generators:\n",
+    "\n",
+    "- `scaling_method`: `Union[gf.ScalingMethod, None]` = `None`\n",
+    "  > This parameter can accept a `gf.ScalingMethod` object, which can be used to scale this waveform when it is injected into obfuscating noise. This process will be discussed in more detail in a later notebook. When the default value, `None`, is used, no scaling will be applied.\n",
+    "\n",
+    "- `injection_chance`: `float` = `1.0`\n",
+    "  > This parameter determines how likely it is for the waveform generator to return an injection vs a tensor of all zeros. This functionality is utilized when generating a dataset which contains a mix of examples with and without injected signals. We will also discuss the use of this parameter in more detail in future notebooks. The default value is 1.0, this will cause the iterator to generate injections on every iteration.\n",
+    "\n",
+    "- `front_padding_duration_seconds`: `float` = `0.3`\n",
+    "  > GravyFlow Waveform generators output tensors which are the length of the onsource segment duration so that they can be easily summed with obfuscating noise. They will randomize the position of the waveform within that segment between front_padding_duration_seconds and back_padding_duration_seconds. In GravyFlow, injection padding is performed from the last sample of the generated waveform. For example, if front_padding_duration_seconds was 0.3 s, as is default, the last sample of the waveform cannot be less than 0.3 s from the start of the onsource segment. If the waveform is longer than the onsource duration, then the start of the waveform will be cropped and will not appear in the output tensor. If back_padding_duration_seconds was 0.3 s, then the last sample of the generated waveform cannot be within 0.3 s of the end of the onsource segment. If you wish to output waveforms in a fixed position with no random start time variance, set front_padding_duration_seconds = back_padding_duration_seconds = your desired last sample time in seconds. By default, front_padding_duration_seconds is 0.3 s.\n",
+    "\n",
+    "- `back_padding_duration_seconds`: `float` = `0.0`\n",
+    "  > This parameter determines the closest the last sample of the generated waveform can be from the end of the onsource period. See the description of front_padding_duration_seconds for more clarification. The default value is 0.0 s, meaning that waveforms can generate up to the end of the onsource window.\n",
+    "\n",
+    "- `scale_factor`: `Union[float, None]` = `None`\n",
+    "  > As has been mentioned previously, it is sometimes desirable to scale data to values close to one for easier consumption by artificial neural networks. Rather than using a form of normalization, GravyFlow introduces a scale factor which can be used to scale all waveforms by an identical amount. If None, which is the default, no scaling is performed.\n",
+    "\n",
+    "- `network`: `Union[List[IFO], gf.Network, Path, None]` = `None`\n",
+    "  > We can also set the interferometer network configuration we wish to use to project this detector. This is not used by the waveform generator itself, but is used when this is used as part of a composition into a gf.Dataset, which will be described in later datasets. The default value is one.\n",
+    "\n",
+    "Let's begin by generating a single IMRPhenomD waveform:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generating an IMRPhenomD waveform\n",
+    "\n",
+    "We can create an IMPhenomD generator by initlizing an instance of the gf.cuPhenomDGenerator class, this has all the parameters of the gf.WaveformGenerator class, listed above, along with these extra parameter which determine the properties of the IMRPhenomD waveform:\n",
+    "\n",
+    "- `mass_1_msun` (`Union[float, gf.Distribution]`, default = `gf.Distribution(min_=5.0, max_=95.0, type_=gf.DistributionType.UNIFORM)`):\n",
+    "  > Description: [Placeholder for the description of the first mass parameter in solar masses and how it influences the waveform.]\n",
+    "\n",
+    "- `mass_2_msun` (`Union[float, gf.Distribution]`, default = `gf.Distribution(min_=5.0, max_=95.0, type_=gf.DistributionType.UNIFORM)`):\n",
+    "  > Description: [Placeholder for the description of the second mass parameter in solar masses and its impact on the waveform.]\n",
+    "\n",
+    "- `inclination_radians` (`Union[float, gf.Distribution]`, default = `gf.Distribution(min_=0.0, max_=np.pi, type_=gf.DistributionType.UNIFORM)`):\n",
+    "  > Description: [Placeholder for the explanation of the inclination angle in radians and its effect on the waveform's appearance.]\n",
+    "\n",
+    "- `distance_mpc` (`Union[float, gf.Distribution]`, default = `50.0`):\n",
+    "  > Description: [Placeholder for detailing how the distance of the waveform source, measured in megaparsecs, affects the generated waveform.]\n",
+    "\n",
+    "- `reference_orbital_phase_in` (`Union[float, gf.Distribution]`, default = `0.0`):\n",
+    "  > Description: [Placeholder for describing the reference orbital phase's role in waveform generation.]\n",
+    "\n",
+    "- `ascending_node_longitude` (`Union[float, gf.Distribution]`, default = `0.0`):\n",
+    "  > Description: [Placeholder for the significance of the ascending node longitude in the waveform's characteristics.]\n",
+    "\n",
+    "- `eccentricity` (`Union[float, gf.Distribution]`, default = `0.0`):\n",
+    "  > Description: [Placeholder for explaining how the eccentricity parameter affects the waveform shape and evolution.]\n",
+    "\n",
+    "- `mean_periastron_anomaly` (`Union[float, gf.Distribution]`, default = `0.0`):\n",
+    "  > Description: [Placeholder for the impact of the mean periastron anomaly on the waveform.]\n",
+    "\n",
+    "- `spin_1_in` (`Union[float, gf.Distribution]`, default = `0.0`):\n",
+    "  > Description: [Placeholder for detailing the effect of the first object's spin on the waveform.]\n",
+    "\n",
+    "- `spin_2_in` (`Union[float, gf.Distribution]`, default = `0.0`):\n",
+    "  > Description: [Placeholder for the influence of the second object's spin on the waveform.]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:mass_1_msun should be float not int, automatically adjusting.\n",
-      "WARNING:root:mass_2_msun should be float not int, automatically adjusting.\n"
+     "ename": "NameError",
+     "evalue": "name 'gf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m phenom_d_generator : gf\u001b[39m.\u001b[39mWaveformGenerator \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39mcuPhenomDGenerator(\n\u001b[1;32m      2\u001b[0m     mass_1_msun\u001b[39m=\u001b[39m\u001b[39m50.0\u001b[39m,\n\u001b[1;32m      3\u001b[0m     mass_2_msun\u001b[39m=\u001b[39m\u001b[39m50.0\u001b[39m,\n\u001b[1;32m      4\u001b[0m     inclination_radians\u001b[39m=\u001b[39m\u001b[39m0.0\u001b[39m\n\u001b[1;32m      5\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gf' is not defined"
      ]
     }
    ],
