--- a/examples/04_projecting_injections.ipynb
+++ b/examples/04_projecting_injections.ipynb
@@ -517,9 +517,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m wnb_generator_a : gf\u001b[39m.\u001b[39mWaveformGenerator \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39mWNBGenerator(\n\u001b[1;32m      2\u001b[0m     duration_seconds\u001b[39m=\u001b[39m\u001b[39m0.7\u001b[39m,\n\u001b[1;32m      3\u001b[0m     min_frequency_hertz\u001b[39m=\u001b[39m\u001b[39m50.0\u001b[39m,\n\u001b[1;32m      4\u001b[0m     max_frequency_hertz\u001b[39m=\u001b[39m\u001b[39m100.0\u001b[39m\n\u001b[1;32m      5\u001b[0m )\n\u001b[1;32m      6\u001b[0m wnb_generator_b : gf\u001b[39m.\u001b[39mWaveformGenerator \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39mWNBGenerator(\n\u001b[1;32m      7\u001b[0m     duration_seconds\u001b[39m=\u001b[39m\u001b[39m0.7\u001b[39m,\n\u001b[1;32m      8\u001b[0m     min_frequency_hertz\u001b[39m=\u001b[39m\u001b[39m10.0\u001b[39m,\n\u001b[1;32m      9\u001b[0m     max_frequency_hertz\u001b[39m=\u001b[39m\u001b[39m10.0\u001b[39m\n\u001b[1;32m     10\u001b[0m )\n\u001b[1;32m     12\u001b[0m incoherent_generator : gf\u001b[39m.\u001b[39mInjectionGenerator  \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39mIncoherentGenerator(\n\u001b[1;32m     13\u001b[0m     [wnb_generator_a, wnb_generator_b]\n\u001b[1;32m     14\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "wnb_generator_a : gf.WaveformGenerator = gf.WNBGenerator(\n",
     "    duration_seconds=0.7,\n",
